<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/dialog_winners_title"
            android:textSize="30sp"
            android:fontFamily="sans-serif-thin"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="#666"/>

    <ViewSwitcher
            android:id="@+id/switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ListView
                    android:id="@+id/list_winners"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@android:id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/winners_empty"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/text_secondary"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:visibility="gone"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?buttonBarStyle">

                <Button
                        android:id="@android:id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close"
                        style="?buttonBarButtonStyle"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txt_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/dialog_winners_delete_prompt"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:fontFamily="sans-serif-condensed"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?buttonBarStyle">

                <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@android:string/cancel"
                        style="?buttonBarButtonStyle"/>

                <Button
                        android:id="@+id/btn_revoke"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/revoke"
                        style="?buttonBarButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </ViewSwitcher>
</LinearLayout>
